--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.3",
         "hanson/foundation-sdk": "^5.0",
       "ext-json": "*",
       "ext-openssl": "*"
@@ -18,5 +18,9 @@
         "psr-4": {
             "Stone\\HmpayAgent\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "mockery/mockery": "^1.5"
     }
 }
