--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "stone\/hmpay-agent",
+    "name": "Stone009\/hmpay-agent",
     "description": "hmpay agent SDK!",
     "license": "MIT",
     "authors": [
         {
-            "name": "Stone",
+            "name": "Stone009",
             "email": "15917230970@163.com"
         }
     ],
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Stone\\HmpayAgent\\": "src"
+            "Stone009\\HmpayAgent\\": "src"
         }
     },
     "require-dev": {
