--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Stone009\/hmpay-agent",
+    "name": "stone009\/hmpay-agent",
     "description": "hmpay agent SDK!",
     "license": "MIT",
     "authors": [
